# Mp3PlayerAI

./: llama_android_JAN2025.cpp  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tomersch/mp3playerai/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: audio_pca_components.npy  meta_pca_components.npy
app/src/main/cpp/: CMakeLists.txt  llama_android.cpp  llm_jni.cpp  mp3playerai.cpp
app/src/main/java/com/tomersch/mp3playerai/activities/: DevActivity.java  LogsActivity.java  MainActivity.java  ModelManagerActivity.java
app/src/main/java/com/tomersch/mp3playerai/adapters/: FolderAdapter.java  MusicPagerAdapter.java  PlaylistAdapter.java  SongAdapter.java
app/src/main/java/com/tomersch/mp3playerai/ai/: AILearningManager.java  AIRecommendationEngine.java  AdvancedSongCategorizer.java  DBColumns.java  DBUtils.java  LlamaLocalClient.java  LocalLlmInterpreter.java  LocalLlmQueryParser.java  ModelDownloadWorker.java  ModelManager.java  QueryProfile.java  SongMatcher.java
app/src/main/java/com/tomersch/mp3playerai/fragments/: AIFragment.java  AllSongsFragment.java  CustomFragment.java  FavoritesFragment.java  FoldersFragment.java  (+3 more)
app/src/main/res/drawable/: bg_ai_status.xml  button_accent.xml  button_outline.xml  edittext_background.xml  ic_ai_continue.xml  ic_ai_sparkle.xml  ic_repeat_all.xml  ic_repeat_off.xml  ic_repeat_one.xml
app/src/main/res/layout/: activity_dev.xml  activity_logs.xml  activity_main.xml  activity_model_manager.xml  activity_model_store.xml  bottom_sheet_player.xml  dialog_edit_score.xml  dialog_song_scores.xml  fragment_ai.xml  fragment_all_songs.xml  fragment_custom.xml  fragment_favorites.xml  fragment_folders.xml  fragment_list_container.xml  fragment_player.xml  fragment_playlists.xml  item_folder.xml  item_playlist.xml  item_song.xml  item_song_score.xml  placeholder.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tomersch/mp3playerai/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+22 files in other folders)
